--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -1,19 +1,11 @@
-$primary: #6b5aed;
-$secondary: #47bdaf;
+$primary: #3849AB;
+$secondary: #F03A47;
 
-$font-primary: #2f323e;
-$font-secondary: #9fa3b5;
-$font-input: #484d66;
-$font-icon: #82879e;
+$font-primary: #525252;
+$font-secondary: #aeaeae;
 
-$background: #f9fafc;
-$highlight: #f5f6fa;
-$border: #d5d8e3;
-$border-input: #b8bccd;
-
-$green: #3dca61;
-$red: #f84f4f;
-$orange: #ff9860;
+$background: #ffffff;
+$line: #dee0df;
 
 $animate: cubic-bezier(0.645, 0.045, 0.355, 1);
 
