--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,10 +1,30 @@
 @import "../../assets/sass/vars";
 
 .Container {
-  width: 100%;
-  padding: 50px 150px;
 
-  @include onDesktop { padding: 50px 100px; }
-  @include onTablet { padding: 50px 50px; }
-  @include onPhablet { padding: 50px 30px; }
+}
+
+.Content {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.Landing {
+  height: calc(100vh - 90px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  h1 {
+    font-size: 50px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    font-size: 25px;
+    color: $primary;
+  }
 }
