--- a/src/components/Link/Link.module.scss
+++ b/src/components/Link/Link.module.scss
@@ -1,11 +1,11 @@
-@import "../../../assets/sass/vars";
+@import '../../../assets/sass/vars';
 
 .Link {
   color: $primary;
   text-decoration-skip-ink: auto;
 
   &::after {
-    content: "";
+    content: '';
     display: block;
     width: 0px;
     height: 1px;
