--- a/src/templates/reference.module.scss
+++ b/src/templates/reference.module.scss
@@ -74,7 +74,8 @@
     h2 {
       font-size: 30px;
       font-weight: 400;
-      margin: 55px 0 15px;
+      margin: 0 0 15px;
+      padding-top: 55px;
       position: relative;
 
       &:first-of-type {
@@ -92,7 +93,7 @@
     h3 {
       font-size: 24px;
       font-weight: 400;
-      margin-top: 30px;
+      padding-top: 30px;
       margin-bottom: 10px;
     }
 
