--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,7 +5,6 @@
 
 .Content {
   width: 90%;
-  max-width: 1200px;
   margin: 0 auto;
 }
 
@@ -17,14 +16,14 @@
   text-align: center;
 
   h1 {
-    font-size: 50px;
+    font-size: 2.5em;
     font-weight: 600;
-    margin-bottom: 15px;
+    margin-bottom: 0.3em;
   }
 
   h2 {
-    font-size: 25px;
+    font-size: 1.25em;
     color: $primary;
-    margin-bottom: 50px;
+    margin-bottom: 2em;
   }
 }
