--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -36,11 +36,21 @@
   padding: 3px 30px 0;
   color: $primary;
 
+  @media (max-width: 500px) {
+    span {
+      display: none;
+    }
+  }
+
   i {
-    font-size: 30px;
+    font-size: 1.2em;
     vertical-align: middle;
-    margin-top: -6px;
+    margin-top: -0.2em;
     margin-right: 5px;
+
+    @media (max-width: 500px) {
+      margin-right: 0;
+    }
   }
 }
 
@@ -77,6 +87,10 @@
   display: flex;
   padding: 0 20px;
   border-left: 1px solid $line;
+
+  @media (max-width: 1050px) {
+    display: none;
+  }
 
   li {
     display: flex;
