--- a/assets/sass/_vars.scss
+++ b/assets/sass/_vars.scss
@@ -1,5 +1,7 @@
-$primary: #3849ab;
-$secondary: #f03a47;
+$primary: #927fb4;
+$secondary: #57b5a6;
+$highlight1: #cf4c47;
+$highlight2: #e2c552;
 
 $font-primary: #525252;
 $font-secondary: #aeaeae;
